--- a/login.html
+++ b/login.html
@@ -4,6 +4,11 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>FetchViews - Login</title>
+        <link
+            rel="shortcut icon"
+            href="./assets/logo/favicon2.png"
+            type="image/x-icon"
+        />
         <link rel="stylesheet" href="css/tailwind-runtime.css" />
         <link rel="stylesheet" href="css/index.css" />
         <link
