--- a/terms_of_service.html
+++ b/terms_of_service.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Terms of Service</title>
+    <link
+        rel="shortcut icon"
+        href="./assets/logo/favicon2.png"
+        type="image/x-icon"
+    />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/tailwind-runtime.css">
     <style>
