--- a/gallery.html
+++ b/gallery.html
@@ -564,6 +564,7 @@
                             tw-gap-6 tw-auto-rows-max">
                     <div class="tw-cursor-pointer tw-relative tw-group">
                         <div class="tw-aspect-video tw-rounded-lg tw-overflow-hidden tw-border-4 hover:tw-border-[#6366f1] tw-border-transparent tw-transition-colors">
+                            <img src="https://i.ytimg.com/vi/8YbZuaBP9B8/maxresdefault.jpg" alt="Thumbnail 1" class="tw-w-full tw-h-full tw-object-cover">
                         </div>
                     </div>
                 </div>
