--- a/pages/login.html
+++ b/pages/login.html
@@ -24,7 +24,7 @@
                 <!-- Formulaire à gauche -->
                 <div class="tw-w-full md:tw-w-1/2 tw-p-8 lg:tw-p-12">
                     <div class="tw-mb-8">
-                        <a href="index.html" class="tw-flex tw-items-center tw-gap-2">
+                        <a href="./index.html" class="tw-flex tw-items-center tw-gap-2">
                             <img src="./assets/logo/logo3.png" alt="Logo" class="tw-h-8 tw-w-13" />
                         </a>
                     </div>
