--- a/pages/planify_video.html
+++ b/pages/planify_video.html
@@ -18,7 +18,7 @@
     <header class="tw-fixed tw-top-0 tw-left-0 tw-right-0 tw-h-16 tw-bg-white dark:tw-bg-[#17181b] tw-border-b dark:tw-border-gray-800 tw-z-50">
         <div class="tw-flex tw-items-center tw-justify-between tw-h-full tw-px-6">
             <!-- Logo -->
-            <a href="index.html" class="tw-flex tw-items-center tw-gap-2">
+            <a href="./index.html" class="tw-flex tw-items-center tw-gap-2">
                 <img src="./assets/logo/logo3.png" alt="Logo" class="tw-h-8 tw-w-13" />
             </a>
 
