--- a/gallery.html
+++ b/gallery.html
@@ -24,7 +24,7 @@
                 <div class="tw-flex tw-items-center tw-justify-between">
                     <!-- Logo et Dashboard -->
                     <div class="tw-flex tw-items-center">
-                        <a href="./index.html" class="tw-flex tw-items-center tw-gap-2">
+                        <a href="index.html" class="tw-flex tw-items-center tw-gap-2">
                             <img src="./assets/logo/logo3.png" alt="Logo" class="tw-h-8 tw-w-13" />
                         </a>
                     </div>
