--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         <i class="bi bi-sun" id="toggle-mode-icon"></i>
                     </button> -->
                     <a
-                        href="pages/login.html"
+                        href="login.html"
                         aria-label="Login/Sign in"
                         class="btn tw-flex tw-gap-3 tw-px-3 tw-py-2 tw-transition-transform 
                                     tw-duration-[0.3s] hover:tw-translate-x-2"
@@ -547,7 +547,7 @@
                   
                     </ul>
                     <a
-                        href="pages/sign_up.html"
+                        href="sign_up.html"
                         class="btn tw-mt-6 !tw-w-full tw-transition-transform hover:tw-scale-x-[1.02] tw-text-3xl max-md:tw-text-3xl  tw-font-semibold"
 
 
@@ -719,7 +719,7 @@
                        <!-- <h2 class="tw-text-xl">Legal</h2> -->
                         <div class="tw-flex tw-flex-col tw-gap-3 tw-mt-8">
                             <a href="#" class="footer-link">Legal information</a>
-                            <a href="pages/terms_of_service.html" class="footer-link">Terms of Service</a>
+                            <a href="terms_of_service.html" class="footer-link">Terms of Service</a>
                             <a href="#" class="footer-link">Privacy Policy</a>
                         </div>
                     </div>
