--- a/terms_of_service.html
+++ b/terms_of_service.html
@@ -24,7 +24,7 @@
         <div class="tw-max-w-7xl tw-mx-auto tw-flex tw-justify-between tw-items-center">
             <h1 class="tw-text-2xl tw-font-bold">Terms of Service</h1>
             <nav class="tw-flex tw-gap-6">
-                <a href="./index.html" class="tw-text-2xl tw-text-gray-700 dark:tw-text-gray-300 hover:tw-text-blue-500">Home</a>
+                <a href="index.html" class="tw-text-2xl tw-text-gray-700 dark:tw-text-gray-300 hover:tw-text-blue-500">Home</a>
 
             </nav>
         </div>
@@ -60,7 +60,7 @@
                 <div
                     class="tw-flex tw-h-full tw-w-[250px] tw-flex-col tw-place-items-center tw-gap-6 max-md:tw-w-full"
                 >   
-                    <a href="./index.html" class="tw-w-full tw-place-items-center tw-flex tw-flex-col tw-gap-6">
+                    <a href="index.html" class="tw-w-full tw-place-items-center tw-flex tw-flex-col tw-gap-6">
                         <img
                             src="./assets/logo/logo3.png"
                             alt="logo"
