title generator page added

--- a/myvideos.html
+++ b/myvideos.html
@@ -83,24 +83,23 @@
                     </li>
                     
                     <!-- Workflow -->
-                    <li>
+                    <!--<li>
                         <a href="workflow.html" class="tw-flex tw-items-center tw-gap-3 tw-px-4 tw-py-3 tw-rounded-lg hover:tw-bg-gray-100 dark:hover:tw-bg-gray-800">
                             <i class="bi bi-camera-video"></i>
                             <span>Upload Video</span>
                         </a>
-                    </li>
-                    
-                    <!-- Profile -->
+                    </li>-->
+
                     <li>
-                        <a href="profile.html" class="tw-flex tw-items-center tw-gap-3 tw-px-4 tw-py-3 tw-rounded-lg hover:tw-bg-gray-100 dark:hover:tw-bg-gray-800">
-                            <i class="bi bi-credit-card"></i>
-                            <span>Profile</span>
+                        <a href="title_generation.html" class="tw-flex tw-items-center tw-gap-3 tw-px-4 tw-py-3 tw-rounded-lg hover:tw-bg-gray-100 dark:hover:tw-bg-gray-800">
+                            <i class="bi bi-type"></i>
+                            <span>Title Generator</span>
                         </a>
                     </li>
 
                     <!-- My videos -->
                     <li>
-                        <a href="myvideos.html" class="tw-flex tw-items-center tw-gap-3 tw-px-4 tw-py-3 tw-rounded-lg tw-bg-[#6366f1] tw-text-white">
+                        <a href="#" class="tw-flex tw-items-center tw-gap-3 tw-px-4 tw-py-3 tw-rounded-lg tw-bg-[#6366f1] tw-text-white">
                             <i class="bi bi-collection-play"></i>
                             <span>My videos</span>
                         </a>
@@ -111,6 +110,14 @@
                         <a href="heartlist.html" class="tw-flex tw-items-center tw-gap-3 tw-px-4 tw-py-3 tw-rounded-lg hover:tw-bg-gray-100 dark:hover:tw-bg-gray-800">
                             <i class="bi bi-heart"></i>
                             <span>My heartlist</span>
+                        </a>
+                    </li>
+
+                    <!-- Profile -->
+                    <li>
+                        <a href="profile.html" class="tw-flex tw-items-center tw-gap-3 tw-px-4 tw-py-3 tw-rounded-lg hover:tw-bg-gray-100 dark:hover:tw-bg-gray-800">
+                            <i class="bi bi-credit-card"></i>
+                            <span>Profile</span>
                         </a>
                     </li>
                 </ul>
