--- a/dashboard.html
+++ b/dashboard.html
@@ -91,6 +91,13 @@
                     </li>-->
 
                     <li>
+                        <a href="thumbnails_generator.html" class="tw-flex tw-items-center tw-gap-3 tw-px-4 tw-py-3 tw-rounded-lg tw-bg-[#6366f1] tw-text-white">
+                            <i class="bi bi-image"></i>
+                            <span>Thumbnails Generator</span>
+                        </a>
+                    </li>
+
+                    <li>
                         <a href="title_generation.html" class="tw-flex tw-items-center tw-gap-3 tw-px-4 tw-py-3 tw-rounded-lg hover:tw-bg-gray-100 dark:hover:tw-bg-gray-800">
                             <i class="bi bi-type"></i>
                             <span>Title Generator</span>
@@ -98,12 +105,14 @@
                     </li>
 
                     <!-- My videos -->
+                    <!--
                     <li>
                         <a href="myvideos.html" class="tw-flex tw-items-center tw-gap-3 tw-px-4 tw-py-3 tw-rounded-lg hover:tw-bg-gray-100 dark:hover:tw-bg-gray-800">
                             <i class="bi bi-collection-play"></i>
                             <span>My videos</span>
                         </a>
                     </li>
+                    -->
 
                     <!-- My heartlist -->
                     <li>
