--- a/heartlist.html
+++ b/heartlist.html
@@ -91,7 +91,7 @@
                     </li>-->
 
                     <li>
-                        <a href="thumbnails_generator.html" class="tw-flex tw-items-center tw-gap-3 tw-px-4 tw-py-3 tw-rounded-lg tw-bg-[#6366f1] tw-text-white">
+                        <a href="thumbnails_generator.html" class="tw-flex tw-items-center tw-gap-3 tw-px-4 tw-py-3 tw-rounded-lg hover:tw-bg-gray-100 dark:hover:tw-bg-gray-800">
                             <i class="bi bi-image"></i>
                             <span>Thumbnails Generator</span>
                         </a>
