--- a/thumbnails_generator.html
+++ b/thumbnails_generator.html
@@ -174,7 +174,7 @@
                                 <textarea
                                     id="prompt"
                                     class="tw-w-[80%] tw-h-[90px] tw-px-4 tw-py-3 tw-rounded-lg tw-bg-white dark:tw-bg-[#17181b] tw-border dark:tw-border-gray-800 focus:tw-border-[#6366f1] focus:tw-ring-1 focus:tw-ring-[#6366f1] tw-outline-none tw-transition-colors"
-                                    placeholder="Describe how you want to modify your thumbnail..."
+                                    placeholder="Describe how you want to generate your thumbnail..."
                                 ></textarea>
                                 
                                 <!-- Bouton Generate -->
