delete link to legal pages & add nav bar link to solutions

--- a/index.html
+++ b/index.html
@@ -234,6 +234,7 @@
 
         <section
             class="tw-relative tw-flex tw-min-h-[80vh] tw-w-full tw-max-w-[100vw] tw-flex-col tw-place-content-center tw-place-items-center tw-overflow-hidden tw-p-6 tw-pb-16"
+            id="solutions"
         >
             <div
                 class="reveal-up tw-flex tw-min-h-[60vh] tw-place-content-center tw-place-items-center tw-gap-[10%] max-lg:tw-flex-col max-lg:tw-gap-10"
@@ -719,7 +720,7 @@
                        <!-- <h2 class="tw-text-xl">Legal</h2> -->
                         <div class="tw-flex tw-flex-col tw-gap-3 tw-mt-8">
                             <a href="#" class="footer-link">Legal information</a>
-                            <a href="terms_of_service.html" class="footer-link">Terms of Service</a>
+                            <a href="#" class="footer-link">Terms of Service</a>
                             <a href="#" class="footer-link">Privacy Policy</a>
                         </div>
                     </div>
