--- a/title_generation.html
+++ b/title_generation.html
@@ -237,9 +237,8 @@
             </div>
         </div>
     </div>
-
-    <script>
-        document.addEventListener('DOMContentLoaded', function() {
+<script>
+    document.addEventListener('DOMContentLoaded', function() {
         const form = document.getElementById('titleGeneratorForm');
         const generateButton = document.getElementById('generateButton');
         const generatedTitleContainer = document.getElementById('generatedTitle');
@@ -253,7 +252,6 @@
             const videoType = document.getElementById('videoType').value;
             const titleStyle = document.getElementById('titleStyle').value;
 
-            // Show loading state
             generateButton.disabled = true;
             generateButton.innerHTML = `
                 <i class="bi bi-arrow-repeat tw-animate-spin"></i>
@@ -261,13 +259,13 @@
             `;
 
             try {
-                const title = await generateTitleFromAPI(topic, audience, videoType, titleStyle);
-                displayGeneratedTitle(title);
+                const titles = await generateTitleFromAPI(topic, audience, videoType, titleStyle);
+                displayGeneratedTitles(titles);
             } catch (error) {
                 console.error('Error generating title:', error);
                 titleContainer.innerHTML = `
                     <div class="tw-text-red-600 dark:tw-text-red-400">
-                        Failed to generate title. Please try again later.
+                        Failed to generate titles. Please try again later.
                     </div>
                 `;
             } finally {
@@ -278,23 +276,46 @@
         });
 
         async function generateTitleFromAPI(topic, audience, videoType, titleStyle) {
-            // Prepare the prompt for your model
-            const prompt = {
-                topic: topic,
-                audience: audience,
-                videoType: videoType,
-                titleStyle: titleStyle
+            const options = {
+                method: "POST",
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify({ prompt: prompt })
             };
 
-            return "Ceci est un test, attention à ne pas se tromper"; 
+            try {
+                const response = await fetchWithAuth('https://web-production-5b55f.up.railway.app/api/gallery/title_generation/', options);
+
+                if (!response) {
+                    throw new Error(`HTTP error! Status: ${response.status}`);
+                }
+
+                const data = response;
+                return data.titles || []; 
+            } catch (error) {
+                console.error("Error fetching API:", error);
+                throw error;
+            }
         }
 
-        function displayGeneratedTitle(title) {
+        function displayGeneratedTitles(titles) {
+            if (!titles.length) {
+                titleContainer.innerHTML = `
+                    <div class="tw-text-red-600 dark:tw-text-red-400">
+                        No titles generated. Try again.
+                    </div>
+                `;
+                return;
+            }
+
             titleContainer.innerHTML = `
-                <div class="tw-flex tw-justify-between tw-items-center tw-group">
-                    <p class="tw-flex-1 tw-text-lg tw-font-medium tw-bg-indigo-100 dark:tw-bg-indigo-900/30 tw-text-indigo-700 dark:tw-text-indigo-300 tw-p-4 tw-rounded-lg tw-transition-colors tw-text-center">${title}</p>
-                </div>
+                <ul class="tw-space-y-2">
+                    ${titles.map(title => `
+                        <li class="tw-bg-indigo-100 dark:tw-bg-indigo-900/30 tw-text-indigo-700 dark:tw-text-indigo-300 tw-p-4 tw-rounded-lg tw-text-center tw-cursor-pointer hover:tw-bg-indigo-200 dark:hover:tw-bg-indigo-800 transition">
+                            ${title}
+                        </li>
+                    `).join('')}
+                </ul>
             `;
         }
     });
-    </script>
+</script>
