little bug with prompt fixed

--- a/title_generation.html
+++ b/title_generation.html
@@ -279,7 +279,7 @@
             const options = {
                 method: "POST",
                 headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify({ prompt: prompt })
+                body: JSON.stringify({ prompt: topic })
             };
 
             try {
