language selector updated color

--- a/title_generation.html
+++ b/title_generation.html
@@ -173,7 +173,7 @@
                                 </label>
                                 <select
                                     id="language"
-                                    class="tw-w-full tw-px-4 tw-py-2 tw-rounded-lg tw-border dark:tw-border-gray-700 tw-bg-transparent focus:bg-[#17181b] focus:tw-ring-2 focus:tw-ring-[#6366f1]"
+                                    class="tw-w-full tw-px-4 tw-py-2 tw-rounded-lg tw-border dark:tw-border-gray-700 tw-bg-white dark:tw-bg-[#17181b] focus:tw-ring-2 focus:tw-ring-[#6366f1] focus:tw-border-[#6366f1]"
                                 >
                                     <option value="en">English</option>
                                     <option value="fr">French</option>
