--- a/index.html
+++ b/index.html
@@ -137,13 +137,13 @@
                     <div class="tw-w-1/2 max-lg:tw-w-full tw-flex tw-justify-center tw-items-center">
                         <div class="image-comparison tw-relative tw-w-full tw-max-w-[700px] tw-rounded-xl tw-overflow-hidden tw-shadow-lg">
                             <!-- Image "After" en arrière-plan (fixe) -->
-                            <img src="./assets/images/thumbnails_generated/after.png" 
+                            <img src="./assets/thumbnails/summer.png" 
                                  alt="After" 
                                  class="tw-w-full tw-h-auto tw-object-contain"
                             />
                             <!-- Conteneur de l'image "Before" avec clip-path -->
                             <div class="image-comparison-overlay tw-absolute tw-inset-0">
-                                <img src="./assets/images/thumbnails_generated/before.png" 
+                                <img src="./assets/thumbnails/space.png" 
                                      alt="Before" 
                                      class="tw-w-full tw-h-full tw-object-cover"
                                 />
@@ -173,7 +173,7 @@
                 </div>
                 <div class="tw-flex-shrink-0 tw-mx-4">
                   <div class="tw-bg-white tw-rounded-xl tw-overflow-hidden tw-shadow-lg tw-w-[300px]">
-                    <img src="assets/thumbnails/ocean.png" alt="Ocean" class="tw-w-full tw-h-[180px] tw-object-cover">
+                    <img src="assets/thumbnails/scary.png" alt="Ocean" class="tw-w-full tw-h-[180px] tw-object-cover">
                   </div>
                 </div>
                 <div class="tw-flex-shrink-0 tw-mx-4">
