--- a/index.html
+++ b/index.html
@@ -721,7 +721,7 @@
                         <div class="tw-flex tw-flex-col tw-gap-3 tw-mt-8">
                             <a href="#" class="footer-link">Legal information</a>
                             <a href="#" class="footer-link">Terms of Service</a>
-                            <a href="#" class="footer-link">Privacy Policy</a>
+                            <a href="privacy_policy.html" class="footer-link">Privacy Policy</a>
                         </div>
                     </div>
                 </div>
