--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -32,9 +32,7 @@
     <main class="tw-px-6 tw-py-12 tw-max-w-7xl tw-mx-auto">
         <section class="tw-mb-12">
             <p class="tw-text-gray-600 dark:tw-text-gray-400">Last updated: February 10, 2025</p>
-            <p class="tw-text-gray-600 dark:tw-text-gray-400">This Privacy Policy describes Our policies and procedures on the collection, use and disclosure of Your information when You use the Service and tells You about Your privacy rights and how the law protects You.</p>
-            <p class="tw-text-gray-600 dark:tw-text-gray-400">We use Your Personal data to provide and improve the Service. By using the Service, You agree to the collection and use of information in accordance with this Privacy Policy. This Privacy Policy has been created with the help of the <a href="https://www.termsfeed.com/privacy-policy-generator/" target="_blank" class="tw-text-blue-500 hover:tw-underline">Privacy Policy Generator</a>.</p>
-        </section>
+            <p class="tw-text-gray-600 dark:tw-text-gray-400">This Privacy Policy describes Our policies and procedures on the collection, use and disclosure of Your information when You use the Service and tells You about Your privacy rights and how the law protects You.</p>        </section>
 
         <section class="tw-mb-12">
             <h2 class="tw-text-xl tw-font-semibold tw-mb-4">Interpretation and Definitions</h2>
