--- a/thumbnails_generator.html
+++ b/thumbnails_generator.html
@@ -103,6 +103,13 @@
                                 <span>Title Generator</span>
                             </a>
                         </li>
+
+                        <li>
+                            <a href="ab_testing.html" class="tw-flex tw-items-center tw-gap-3 tw-px-4 tw-py-3 tw-rounded-lg hover:tw-bg-gray-100 dark:hover:tw-bg-gray-800"> 
+                                <i class="bi bi-graph-up"></i>
+                                <span>A/B Testing</span>
+                            </a>                        
+                        </li>
     
                         <!-- My videos -->
                         <!--
