--- a/ab_testing.html
+++ b/ab_testing.html
@@ -177,7 +177,7 @@
 
                     <!-- Profile -->
                     <li>
-                        <a href="profile.html" class="tw-flex tw-items-center tw-gap-3 tw-px-4 tw-py-3 tw-rounded-lg tw-bg-[#6366f1] tw-text-white">
+                        <a href="profile.html" class="tw-flex tw-items-center tw-gap-3 tw-px-4 tw-py-3 tw-rounded-lg hover:tw-bg-gray-100 dark:hover:tw-bg-gray-800">
                             <i class="bi bi-credit-card"></i>
                             <span>Profile</span>
                         </a>
@@ -364,6 +364,7 @@
 
             try {
                 const response = await fetchWithAuth('https://web-production-5b55f.up.railway.app/api/gallery/ab_testing/', options);
+                console.log(response);
 
                 if (response && response.ok) {
                     document.getElementById('scoreValue').textContent = 
