fix bug a/b testing

--- a/ab_testing.html
+++ b/ab_testing.html
@@ -364,9 +364,8 @@
 
             try {
                 const response = await fetchWithAuth('https://web-production-5b55f.up.railway.app/api/gallery/ab_testing/', options);
-                console.log(response.prediction);
 
-                if (response && response.ok) {
+                if (response) {
                     document.getElementById('scoreValue').textContent = 
                         (response.prediction * 100).toFixed(1);
                     resultSection.classList.remove('tw-hidden');
