--- a/ab_testing.html
+++ b/ab_testing.html
@@ -251,7 +251,7 @@
                 <div id="resultSection" class="tw-hidden tw-bg-white dark:tw-bg-[#17181b] tw-rounded-xl tw-shadow-lg tw-p-6 tw-mb-6">
                     <div class="tw-flex tw-items-center tw-justify-center tw-gap-4">
                         <div class="tw-text-4xl tw-font-bold tw-text-[#6366f1]" id="scoreValue">-</div>
-                        <div class="tw-text-gray-500 dark:tw-text-gray-400">points</div>
+                        <div class="tw-text-gray-500 dark:tw-text-gray-400">/100</div>
                     </div>
                 </div>
 
