--- a/index.html
+++ b/index.html
@@ -137,13 +137,13 @@
                     <div class="tw-w-1/2 max-lg:tw-w-full tw-flex tw-justify-center tw-items-center">
                         <div class="image-comparison tw-relative tw-w-full tw-max-w-[700px] tw-rounded-xl tw-overflow-hidden tw-shadow-lg">
                             <!-- Image "After" en arrière-plan (fixe) -->
-                            <img src="./assets/thumbnails/summer.png" 
+                            <img src="./assets/thumbnails/tokyo_vlog2.webp" 
                                  alt="After" 
                                  class="tw-w-full tw-h-auto tw-object-contain"
                             />
                             <!-- Conteneur de l'image "Before" avec clip-path -->
                             <div class="image-comparison-overlay tw-absolute tw-inset-0">
-                                <img src="./assets/thumbnails/space.png" 
+                                <img src="./assets/thumbnails/bad_tokyo.jpg" 
                                      alt="Before" 
                                      class="tw-w-full tw-h-full tw-object-cover"
                                 />
