new landing images

--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                         class="tw-max-h-[650px] tw-max-w-[850px] tw-overflow-hidden tw-rounded-lg tw-shadow-lg tw-shadow-[rgba(170,49,233,0.44021358543417366)]"
                     >
                         <img
-                            src="./assets\images\Workflow\Edit.png"
+                            src="./assets\images\Workflow\generate_thumbnail.PNG"
                             alt="coding"
                             class="tw-h-full tw-w-full tw-object-cover"
                         />
@@ -351,7 +351,7 @@
                         class="tw-max-h-[650px] tw-max-w-[850px] tw-overflow-hidden tw-rounded-lg tw-shadow-lg tw-shadow-[rgba(170,49,233,0.44021358543417366)]"
                     >
                         <img
-                            src="./assets\images\Workflow\generateGood.png"
+                            src="./assets\images\Workflow\a_b_testing.PNG"
                             alt="coding"
                             class="tw-h-full tw-w-full tw-object-cover"
                         />
