--- a/thumbnails_generator.html
+++ b/thumbnails_generator.html
@@ -200,7 +200,7 @@
 
             <main class="tw-flex-1 tw-ml-64 tw-p-6">
                 <div class="tw-max-w-6xl tw-mx-auto tw-mt-2">
-                    <h1 class="tw-text-2xl tw-font-bold tw-mb-8 tw-text-center">Step 2: Generate a thumbnail</h1>
+                    <h1 class="tw-text-2xl tw-font-bold tw-mb-8 tw-text-center">Generate a thumbnail</h1>
             
                     <div class="tw-flex tw-justify-center tw-items-center tw-mb-12">
                         <div class="tw-cursor-pointer tw-relative tw-group tw-flex tw-flex-col tw-items-center">
