--- a/profile.html
+++ b/profile.html
@@ -257,7 +257,7 @@
                     </div>
                 </div>
         
-                <section class="tw-bg-white dark:tw-bg-gray-900">
+                <section class="tw-bg-gray-900">
                     <div class="tw-py-8 tw-px-4 tw-mx-auto tw-max-w-screen-xl lg:tw-py-16 lg:tw-px-6">
                         <div class="tw-mx-auto tw-max-w-screen-md tw-text-center tw-mb-8 lg:tw-mb-12">
                             <h2 class="tw-mb-4 tw-text-4xl tw-tracking-tight tw-font-extrabold tw-text-gray-900 dark:tw-text-white">Subscription Plans Available</h2>
