--- a/title_generation.html
+++ b/title_generation.html
@@ -298,7 +298,7 @@
             };
 
             try {
-                const response = await fetchWithAuth('https://web-production-5b55f.up.railway.app/api/gallery/title_generation/', options);
+                const response = await fetchWithAuth('http://127.0.0.1:8000/api/gallery/title_generation/', options);
 
                 if (!response) {
                     throw new Error(`HTTP error! Status: ${response.status}`);
