--- a/dashboard.html
+++ b/dashboard.html
@@ -377,7 +377,7 @@
 
             if (button.classList.contains('tw-bg-red-600')) {
                 try {
-                    const response = await fetchWithAuth('http://127.0.0.1:8000/api/oauth/init/', {
+                    const response = await fetchWithAuth(`${BACKEND_URL}/api/oauth/init/`, {
                         method: 'GET',
                     });
 
